Correction contraste

--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: black;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -830,7 +830,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F67d44;
-    color: #FFFFFF!important;
+   
 }
 .btn-footer-contacts
 {
@@ -924,8 +924,9 @@ h4 {
 {
     text-transform: none;
     font-size: 20px;
-    font-weight: 300;
-    color: #f86019;
+    font-weight: 600;
+    color: black;
+
 }
 .footer-p
 {
